--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Drones</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header class="header">
+        <div class="logo"></div>
+        <ul class="ul1">
+            <li>Drones</li>
+            <li>Solar Energy</li>
+            <li>Electrical</li>
+            <li>Search&Rescue</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </header>
+
+
 </body>
 </html>
