Avelacreci main-container u mej  eli diver u iranc styler

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <li>Contact</li>
         </ul>
     </header>
-
+    <div class="main-container">
+        <div class="heading1">The Eye in the Sky</div>
+        <div class="info1">A high-powered solution for inspections and search and rescue</div>
+        <button class="btn1">Conect us</button>
+    </div>
 
 </body>
 </html>
