Avelacreci Dron u ira teqst, manushakaguyn fon list du ara

--- a/index.html
+++ b/index.html
@@ -40,5 +40,17 @@
   </svg>
 </section>
 
+    <!-- Dron u teqst -->
+    <div class="main-container3">
+        <div class="Drones">Drones</div>
+        <p class="info2">Why use drones? We think the better question is why not use drones! Our drones offer you the latest technology. They can access dangerous or hard-to-reach areas without putting human lives at risk, making inspections and search and rescue efforts safer. They also reduce the need for expensive equipment, human resources, and time-consuming processes</p>
+        <p class="info3">Drones are trusted by a variety of organizations to deliver results. Both police and firefighters use them to survey challenging situations. Now, we’re bringing this high-powered solution to the public—making it easier for you to monitor land, buildings, and unfolding situations from above. Handling a job below the surface? One of our underwater drones can help!</p>
+        <p class="info4">At Grubs, thermal drones are our speciality. Thermal drones can identify temperature differences, which enables us to detect issues like water leaks, heat loss, and electrical problems in homes and buildings. We even use our thermal drones to help find missing people, pets, and livestock. Our expert drone services are available in Alberta, as well as in British Columbia and Saskatchewan</p>
+    </div>
+
+    <!-- Manushakaguyn fon -->
+    <div class="main-container4">
+        <div class="vernagir">Our services can help make managing property easy:</div>
+    </div>
 </body>
 </html>
