Daxuya ban em avealcrel u footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drones</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- header -->
@@ -28,9 +29,7 @@
             <button class="btn1">Conect us</button>
         </div>
         
-        <div>
-            <div class="cur-tapancik1"></div>
-        </div>
+        <div class="heading2"></div>
     </div>
     
     <!-- Volna kanach-->
@@ -39,6 +38,7 @@
     <path d="M0,100 C360,0 1080,200 1440,100 L1440,0 L0,0 Z" fill="rgba(108, 179, 69, 1)"/>
   </svg>
 </section>
+
 
     <!-- Dron u teqst -->
     <div class="main-container3">
@@ -51,6 +51,45 @@
     <!-- Manushakaguyn fon -->
     <div class="main-container4">
         <div class="vernagir">Our services can help make managing property easy:</div>
+        <p class="p1">&#9632   Thermal Inspections</p>
+        <p class="p1">&#9632   Search and Rescue</p>
+        <p class="p1">&#9632   Multispectral Crop Health inspection</p>
+        <p class="p1">&#9632   Mapping Photogrammetry</p>
+        <p class="p1">&#9632   Lidar Mapping 3D</p>
+        <p class="p1">&#9632   Volume Measurements for Dirt, Gravel, and Pits</p>
+        <p class="p1">&#9632   Drainage</p>
+        <p class="p1">&#9632   Spraying and Seeding</p>
+        <p class="p1">&#9632   Cattle Inspections</p>
     </div>
+
+
+
+
+
+    <!-- Footer -->
+
+    <footer class="footer">
+
+
+        <section class="f1">
+  <svg class="wave2" viewBox="0 0 1440 150" preserveAspectRatio="none">
+    <path d="M0,100 C360,0 1080,200 1440,100 L1440,0 L0,0 Z" fill="rgba(87, 64, 192, 1)"/>
+  </svg>
+    </section>
+
+    <div class="f2">
+
+        <h1 class="footerh1">Contact</h1>
+        <h3 class="footerh2">Get in contact with us today</h3>
+
+        <div class="footericons">
+            <a href="https://mail.google.com/" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+            <i class="fa-solid fa-phone"></i>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+
+    </div>
+    </footer>
 </body>
 </html>
