Avelacreci eli text, et texti nakr du avelcru, avelacrim verjin footer

--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
     </div>
 
 
+    <!-- Footeri u mansh. foni mejtexi teqst -->
+
+     <div class="main-container5">
+        <div class="vernagir2">Aerial Photography/ Videography</div>
+        <p class="info5">Our drones are ideal for aerial photography and videography. Aerial data and mapping provide insights for better decision-making and planning, improving efficiency and resource management. Regular inspections and real-time data help prevent accidents, leaks, and hazards, ensuring the safety of people and property.</p>
+        <div class="vernagir2">Here is how we can help:</div>
+        <p class="p2">&#9632 Reconnaissance </p>
+        <p class="p2">&#9632 Site Safety Inspection </p>
+        <p class="p2">&#9632 Gas Detection  </p>
+        <p class="p2">&#9632 Pipeline Inspections</p>
+        <p class="p2">&#9632 Well Site Inspections</p>
+        <p class="p2">&#9632 Power Line Inspections </p>
+        <p class="p2">&#9632 Roof Inspections </p>
+        <p class="p2">&#9632 Aerial Inspections </p>
+        <p class="p2">&#9632 Real-Time Data </p>
+        <p class="p2">&#9632 Light Pole Instal and Maintenance</p>
+     </div>
 
 
 
@@ -90,6 +107,13 @@
         </div>
 
     </div>
+    </footer>
+
+<!-- Verjin footer -->
+
+    <footer class="footer2">
+        <div class="logo2"></div>
+        <div class="info6">Copyright 2023</div>
     </footer>
 </body>
 </html>
