Avelacrim et qo klorner, menyui knopkeqn u Conetc knopkeqn el poxeci

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </ul>
     </header>
 
+    <!-- Arajin vernagir -->
     
     <div class="main-container">
         <div>
@@ -38,6 +39,9 @@
     <path d="M0,100 C360,0 1080,200 1440,100 L1440,0 L0,0 Z" fill="rgba(108, 179, 69, 1)"/>
   </svg>
 </section>
+
+    <div class="vector6"></div>
+    <div class="vector7"></div>
 
 
     <!-- Dron u teqst -->
