Miqich ban avelacrim

--- a/Home.html
+++ b/Home.html
@@ -42,5 +42,19 @@
 
     <div class="vector6"></div>
     <div class="vector7"></div>
+
+     <div class="main-container3">
+        <div class="Services">Services</div>
+        <p class="info2">Providing 24-hour service to the mid-Alberta region</p>
+    </div>
+
+    <div class="mainkarts">
+        <div class="kart1">
+            <div class="img1"></div>
+            
+        </div>
+        <div class="kart2"></div>
+        <div class="kart3"></div>
+    </div>
 </body>
 </html>
